# Deflect

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/DesktopStreamer/: CMakeLists.txt  DesktopWindowsModel.h  DesktopWindowsModel.mm  MainWindow.cpp  MainWindow.h  mainwindow.ui
apps/QmlStreamer/: CMakeLists.txt  EventHandler.h  QmlStreamer.cpp  QmlStreamer.h  gui.qml  main.cpp
apps/SimpleReceiver/: CMakeLists.txt  main.cpp
deflect/: CMakeLists.txt  EventHandler.cpp  FrameDispatcher.cpp  QmlStreamer.cpp  Socket.cpp  StreamPrivate.cpp  StreamPrivate.h  StreamSendWorker.cpp  StreamSendWorker.h
deflectQml/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  QmlStreamer.cpp  QmlStreamer.h
doc/: Changelog.md
tests/mock/: CMakeLists.txt
